--- a/src/assets/style/grid/secao.css
+++ b/src/assets/style/grid/secao.css
@@ -22,3 +22,8 @@
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(min(100%/2, max(165px, 100%/6)), 1fr));
 }
+
+.secao__cartoes{
+    row-gap: 1rem;
+    column-gap: 1.25rem;
+}
